# image_matching_btw_aeiral_uav

./: .gitignore
include/: descriptorComputer.hpp  imageMatcher.hpp  imagePreprocessor.hpp  keyPointDetector.hpp  utility.hpp
src/: CMakeLists.txt  ImageImport.hpp  ImageMatching.cpp  ImageMatching.hpp  ImagePreprocessing.hpp  TestCodes.hpp  descriptorComputer.cpp  imageMatcher.cpp  keyPointDetector.cpp  main.cpp
test_src/: ImageMatching.hpp  TestCodes.hpp  feature_point_comparison.m  full_map_scenario.m  get_geodetic_info.m  gpucoderSetupReport.html  image_correction.m  image_matching_between_UAV_and_aerial_image.m  image_matching_btw_uav_aerial.ipynb  image_matching_btw_uav_aerial_images.py  image_matching_method_test.py  map_image_matching.m  try_map_image_matching_supplied_from_ngii.m  untitled.m  visualization.py
